--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -22,8 +22,19 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="478dp"
-        android:layout_marginEnd="145dp"
+        android:layout_marginTop="141dp"
+        android:layout_marginEnd="142dp"
         android:text="Main Menu" />
+
+    <Button
+        android:id="@+id/btn_scan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="537dp"
+        android:layout_marginEnd="161dp"
+        android:text="Scan" />
 
 </RelativeLayout>
